<resources>
    <string name="app_name">MobileUpTestApp</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="retry">Retry</string>
    <string name="no_connection">Ops! Something went wrong with your internet connection \n
    Please check it and try again :)</string>
    <string name="service_unavailable">No way! Service is unavailable \n
    Are you going to try again?</string>
    <string name="generic_fail_message">Error</string>
    <string name="error">Some error</string>
    <string name="current_price">%1$s %2$s</string>
    <string name="percentage">%1$s %2$s</string>
    <string name="crypto_image">crypto image</string>
    <string name="back_button">back button</string>
</resources>