<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name"/>
            <com.google.android.material.chip.ChipGroup
                android:layout_margin="@dimen/default_dimen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chip_group">
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/usd_chip"
                    android:text="@string/usd"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/eur_chip"
                    android:text="@string/eur"/>
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/crypto_rv"/>

</LinearLayout>